added some logging demonstrating getParameterMap() call

--- a/src/main/java/gluser1357/FormPanel.html
+++ b/src/main/java/gluser1357/FormPanel.html
@@ -7,7 +7,7 @@
         	<form wicket:id="form">
 				<div wicket:id="rowPanel">
 					<span wicket:id="rows"><input size="10" type="text" wicket:id="text"/><br><br></span>
-  					<a href="#" type="submit" wicket:id="addRow">Add parameter</a><br>
+  					<a href="#" type="submit" wicket:id="addRow____">Add parameter</a><br>
   					<a href="#" type="submit" wicket:id="addRowWith">Add parameter with calling getInputStream() in previous ServletFilter</a>
 				</div>
 			</form>
